FEATURE: Added jbuilder to send JSON formatted response

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -15,6 +15,7 @@ AllCops:
     - 'tmp/**/*'
     - 'vendor/**/*'
     - './*'
+    - 'app/views/restaurants/*'
   NewCops: enable
 
 Style/FrozenStringLiteralComment:
